Bug: Custom Tags has his ID's starting in 1000, to avoid conflict with 
     native tags (thanks to juraj sakala);
Bug: Typo corrected in mlog2waffle.conf (thanks to Juraj Sakala)
Bug: Typo corrected in event feeder wizard;
Bug: Text revised in event feeder wizard;
Bug: Better URL handling in request, patch from Juraj Sakala);
Bug: Typo correction in functions.php, patch from Juraj Sakala);
Bug: This change addresses the issue 43 at 
     http://code.google.com/p/waf-fle/issues/. It reflects problem with 
     parsing of the modsec index file line where is empty or malformed 
     Host header. Patch from Juraj Sakala


Version 0.6.3: Jan, 30 2014
-------------
Bug: mlog2waffle in batch mode dont exit after finish. Fixed.
Bug: fixed mlog2waffle.ubuntu init script to allow start as a daemon in 
     batch mode.
Bug: Fixed issues #21 and #25, when an incomplete request is rejected by
     waf-fle's  database schema, producing an error 500;
Bug: Fixed filter dialog showed in login page when accessed with a valid 
     session
Bug: Fixed issue #20, setup now handle database privilege when mysql and 
     waf-fle are in diferent hosts. Now you can specify the client 
     hostname/address or even a wildcard on setup.
Bug: Fixed issue #26, where the timming filters are not filtering 
     properly. 
Bug: Fixed issue #28, delete events by filter hit a error 500, when any 
     filter beyond date range is used.
Improve: Event delete limit ($deleteLimit) and delete wait ($deleteWait)
         is now parameters in config.php, as sugested in issue #31. This 
         parameters also affect Mark as False Positive events of Current 
         Filter.
Improve: when used with SSL mlog2waffle now allow to define if 
         certificate need to be validated or not. Needed when a self-
         signed certificate is used. Edit mlog2waffle.conf to configure.
Improve: Apache authorization config ajusted to be compatible with 